--- a/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
@@ -122,7 +122,7 @@
 
 		using (conexion)
 		{
-			await Herramientas.Tareas.Portada(conexion);
+			await Herramientas.Tareas.Minimos(conexion);
 		}
 	}
 
