--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -421,14 +421,14 @@ else
 
 	private Usuario usuario = new Usuario();
 
-	List<global::Juegos.Juego> juegosDestacadosMostrar = new List<global::Juegos.Juego>();
-	List<global::Juegos.Juego> juegosDestacadosGestor = new List<global::Juegos.Juego>();
+	List<Juegos.Juego> juegosDestacadosMostrar = new List<Juegos.Juego>();
+	List<Juegos.Juego> juegosDestacadosGestor = new List<Juegos.Juego>();
 	public int cantidadDestacadosMostrar = 6;
 	public int posicionDestacadosMostrar = 0;
 	public int topeAtras = 0;
 	public int topeAdelante = 0;
 
-	List<global::Juegos.Juego> juegosMinimosMostrar = new List<global::Juegos.Juego>();
+	List<Juegos.Juego> juegosMinimosMostrar = new List<Juegos.Juego>();
 
 	private int mensajeMostrar = 0;
 
