--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -67,14 +67,13 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" type="text/css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" type="text/css" />
 
-    <link rel="shortcut icon" href="/favicons/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#1b2838">
-    <meta name="msapplication-TileColor" content="#1b2838">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#002033">
+    <meta name="msapplication-TileColor" content="#002033">
+    <meta name="theme-color" content="#002033">
 
     <base href="~/" />
     <component type="typeof(Juegos.Juego)" render-mode="ServerPrerendered" />
